# Unified-Volunteer-Engagement-and-Community-Support-Platform

./: README.md  pnpm-lock.yaml  pyproject.toml
backend/: .env.example  app.py  config.py  database.py  seed.py
backend/middleware/: auth.py
backend/routes/: applications.py  auth.py  events.py
backend/utils/: jwt_utils.py
