[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "dnspython>=2.8.0",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "pyjwt>=2.12.1",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
]
